--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <spring-statemachine.version>2.0.1.RELEASE</spring-statemachine.version>
     </properties>
 
